--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -8,7 +8,7 @@
   font-weight: 900;
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 767px) {
   .lead__title {
     width: 288px;
     height: 88px;
